--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,21 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="HTML Practice">
+        <meta name="author" content="Aaron Zakimi">
+        <meta name="viewport" content="width=device=width, initial-scale=1.0">
+        <title>HTML Layout 1</title>
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
+    </head>
+    <body>
+        <main>
+            <section class="main-top-section"></section>
+            <section class="left-section"></section>
+            <section class="right-section"></section>
+            <section class="body-section"></section>
+        </main>
+        <footer class="footer-section"></footer>
+    </body>
+</html>
