--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,28 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="HTML Practice">
+        <meta name="author" content="Aaron Zakimi">
+        <meta name="viewport" content="width=device=width, initial-scale=1.0">
+        <title>HTML Layout 2</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="reset.css">
+    </head>
+    <body>
+        <main>
+            <header>
+                <section class="left-rectangle"></section>
+                <section class="mid-rectangle"></section>
+                <section class="right-circle"></section>
+            </header>
+            <body>
+                <section class="body-border"></section>
+                <section class="body-rectangle"></section>
+                <section class="greeting-card">
+                    <p></p>
+                </section>
+            </body>
+        </main>
+    </body>
+</html>
