--- a/second/index.html
+++ b/second/index.html
@@ -12,9 +12,10 @@
     <body>
         <main>
             <header>
+                <section class="border-box"></section>
                 <section class="left-rectangle"></section>
                 <section class="mid-rectangle"></section>
-                <section class="right-circle"></section>
+                <span class="dot"></span>
             </header>
             <body>
                 <section class="body-border"></section>
