--- a/second/index.html
+++ b/second/index.html
@@ -12,7 +12,7 @@
     <body>
         <main>
             <header>
-                <section class="border-box"></section>
+                <section class="header-border"></section>
                 <section class="left-rectangle"></section>
                 <section class="mid-rectangle"></section>
                 <span class="dot"></span>
