--- a/second/index.html
+++ b/second/index.html
@@ -21,7 +21,7 @@
                 <section class="body-border"></section>
                 <section class="body-rectangle"></section>
                 <section class="greeting-card">
-                    <p></p>
+                    <p class="text">HELLO <br> FRIENDS</p>
                 </section>
             </body>
         </main>
