--- a/second/index.html
+++ b/second/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="HTML Practice">
         <meta name="author" content="Aaron Zakimi">
-        <meta name="viewport" content="width=device=width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML Layout 2</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" type="text/css" href="reset.css">
