--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,23 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="HTML Practice # 3">
+        <meta name="keywords" content="html, css, practice, layout">
+        <meta name="autor" content="Aaron Zakimi">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HTML/CSS THREE</title>
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="index.css">  
+    </head>
+    <header class="top-bar">
+        <section class="left-square"></section>
+    </header>
+    <body>
+        <p class="text"></p>
+        <section class="bar-1"></section>
+        <section class="bar-2"></section>
+        <section class="bar-3"></section>
+    </body>
+    <footer class="bar-4"></footer>
+</html>
