--- a/third/index.html
+++ b/third/index.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8">
         <meta name="description" content="HTML Practice # 3">
         <meta name="keywords" content="html, css, practice, layout">
-        <meta name="autor" content="Aaron Zakimi">
+        <meta name="author" content="Aaron Zakimi">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML/CSS THREE</title>
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="index.css">  
     </head>
     <header class="top-bar">
-        <section class="left-square"></section>
+        <section id="left-square"></section>
     </header>
     <body>
         <p class="text"></p>
-        <section class="bar-1"></section>
-        <section class="bar-2"></section>
-        <section class="bar-3"></section>
+        <section id="bar-1"></section>
+        <section id="bar-2"></section>
+        <section id="bar-3"></section>
     </body>
-    <footer class="bar-4"></footer>
+    <footer id="bar-4"></footer>
 </html>
