--- a/third/index.html
+++ b/third/index.html
@@ -14,7 +14,14 @@
         <section id="left-square"></section>
     </header>
     <body>
-        <p class="text"></p>
+        <p class="text">"Wanna hear my people singing, singing songs of redemption
+            Singing songs of the truth, singing songs of the peaceful warrior nation
+            Singing songs to the Gods, of Love and thankfulness
+            'Cause we are alive and we're striving to thrive and we know that we're blessed
+            
+            'Cause we are the ones who come to wipe away the poison that's been seeping into the heart, that's keeping us apart
+            Get down to the heart of the matter, all you're gonna find out is that all that matters is the heart, and at the end of the day
+            Love will find a way" - Mike Love</p>
         <section id="bar-1"></section>
         <section id="bar-2"></section>
         <section id="bar-3"></section>
